compiler/toc-hir-lowering/tests/snapshots/lowering__lower_char_seq_escapes-47.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "var _ : int _ := \"^"
---
Package@(dummy)
  Root@(dummy): FileId(1) -> ItemId(1)
    Module@(FileId(1), 0..19): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..19): []
        StmtItem@(FileId(1), 0..11): ItemId(0)
          ConstVar@(FileId(1), 0..11): var "_"@(FileId(1), 4..5)
            Primitive@(FileId(1), 8..11): Int
        Assign@(FileId(1), 12..19)
          Name@(FileId(1), 12..13): "_"@(FileId(1), 4..5)
          Literal@(FileId(1), 17..19): String("")
error at (FileId(1), 17..19): invalid string literal
| error for (FileId(1), 18..19): unknown caret escape
| error for (FileId(1), 17..19): missing terminator character

