compiler/toc-hir-lowering/tests/snapshots/lowering__lower_char_seq_escapes-53.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
expression: "var _ : int _ := \"\\uD800\""

---
Package@(dummy)
  Root@(dummy): FileId(1) -> ItemId(1)
    Module@(FileId(1), 0..25): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..25): []
        StmtItem@(FileId(1), 0..11): ItemId(0)
          ConstVar@(FileId(1), 0..11): var "_"@(FileId(1), 4..5)
            Primitive@(FileId(1), 8..11): Int
        Assign@(FileId(1), 12..25)
          Name@(FileId(1), 12..13): "_"@(FileId(1), 4..5)
          Literal@(FileId(1), 17..25): String("�")
error in file FileId(1) at 17..25: invalid string literal
| error in file FileId(1) for 18..24: surrogate chars are not allowed in char sequences

